# Aframp-backend

./: .env  .env.example  .gitignore  Cargo.toml  README.md  test_health.sh
contract/: Cargo.toml
contract/contracts/stellar/: Cargo.toml
contract/contracts/stellar/src/: contract.rs  error.rs  events.rs  lib.rs  storage.rs  test.rs
contract/contracts/stellar/test_snapshots/test/: mint_fails_for_non_admin.1.json  mint_transfer_burn_flow_works.1.json  transfer_fails_on_insufficient_balance.1.json
contracts/escrow/src/: test.rs
db/: afri_schema.sql
migrations/: 20260122120000_create_core_schema.sql  20260123040000_implement_payments_schema.sql
src/: config.rs  lib.rs  main.rs
src/api/: health.rs
src/cache/: cache.rs  mod.rs
src/chains/stellar/: client.rs  errors.rs  mod.rs
src/database/: bill_payment_repository.rs  error.rs  exchange_rate_repository.rs  mod.rs  payment_repository.rs  repository.rs  transaction.rs  transaction_repository.rs  trustline_repository.rs  wallet_repository.rs  webhook_repository.rs
src/payments/: mod.rs  traits.rs  types.rs
src/payments/providers/: mod.rs  paystack.rs
test_snapshots/tests/: test_initialize.1.json  test_invalid_fee_rate.1.json  test_non_admin_cannot_set_fee_rate.1.json  test_pause_unpause.1.json  test_prevent_double_initialization.1.json  test_set_admin.1.json  test_set_fee_rate.1.json
tests/: cache_integration_test.rs
