[package]
name = "Bitmesh-backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["database", "cache"]
database = ["dep:sqlx", "dep:tokio", "dep:async-trait", "dep:uuid", "dep:chrono", "dep:serde", "dep:serde_json", "dep:tracing", "dep:tracing-subscriber", "dep:axum", "dep:tower", "dep:tower-http", "dep:regex", "dep:http"]
cache = ["dep:redis", "dep:bb8", "dep:bb8-redis", "database"]

[dependencies]
sqlx = { version = "0.8.1", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json", "macros"], optional = true }
soroban-sdk = "21.0.0"
tokio = { version = "1.36", features = ["full"], optional = true }
async-trait = { version = "0.1", optional = true }
uuid = { version = "1.6", features = ["v4", "serde"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"], optional = true }
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["trace", "request-id"], optional = true }
http = { version = "1.0", optional = true }

# Stellar SDK dependencies (always required)
stellar_sdk = "0.1.4"
reqwest = { version = "0.11", features = ["json"] }
config = "0.14"
base64 = "0.21"
anyhow = "1.0"
thiserror = "1.0"
regex = { version = "1.10", optional = true }

# Redis dependencies for caching
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"], optional = true }
bb8 = { version = "0.8", optional = true }
bb8-redis = { version = "0.15", optional = true }

[[bin]]
name = "Aframp-Backend"
path = "src/main.rs"

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }
tokio = { version = "1.36", features = ["full"] }
